--- a/composer.json
+++ b/composer.json
@@ -15,14 +15,15 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
-        "lorisleiva/laravel-deployer": "^0.2.12"
+        "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0"
+        "phpunit/phpunit": "^8.0",
+        "lorisleiva/laravel-deployer": "^0.2.12"
     },
     "config": {
         "optimize-autoloader": true,
