--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     },
     "dependencies": {
         "@riophae/vue-treeselect": "^0.3.0",
+        "laravel-echo": "^1.6.1",
+        "pusher-js": "^5.0.2",
         "vue": "^2.6.10",
         "vue-axios": "^2.1.4"
     }
