--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "laravel-echo": "^1.6.1",
         "pusher-js": "^5.0.2",
         "vue": "^2.6.10",
-        "vue-axios": "^2.1.4"
+        "vue-axios": "^2.1.4",
+        "vue-google-charts": "^0.3.2"
     }
 }
