--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "ext-simplexml": "*",
         "ext-soap": "*",
         "fideloper/proxy": "^4.0",
+        "jenssegers/agent": "^2.6",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
