--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,5 +2,6 @@
     "/js/admin.js": "/js/admin.js",
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
-    "/js/login.js": "/js/login.js"
+    "/js/login.js": "/js/login.js",
+    "/js/mobile.js": "/js/mobile.js"
 }
