--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "pusher-js": "^5.0.2",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
-    "vue-textarea-autosize": "^1.1.1",
-    "vue-google-charts": "^0.3.2"
+    "vue-click-outside": "^1.0.7",
+    "vue-google-charts": "^0.3.2",
+    "vue-textarea-autosize": "^1.1.1"
   }
 }
