--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
   },
   "dependencies": {
     "@riophae/vue-treeselect": "^0.3.0",
+    "disable-scroll": "^0.5.0",
     "laravel-echo": "^1.6.1",
     "pusher-js": "^5.0.2",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
-    "vue-click-outside": "^1.0.7",
+    "vue-clickaway": "^2.2.2",
     "vue-google-charts": "^0.3.2",
     "vue-textarea-autosize": "^1.1.1"
   }
