--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "disable-scroll": "^0.5.0",
     "laravel-echo": "^1.6.1",
     "pusher-js": "^5.0.2",
+    "v-click-outside": "^3.0.0",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
     "vue-clickaway": "^2.2.2",
