--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "v-click-outside": "^3.0.0",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
+    "vue-emoji-picker": "^1.0.1",
     "vue-google-charts": "^0.3.2",
     "vue-textarea-autosize": "^1.1.1"
   }
