--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vue-axios": "^2.1.4",
     "vue-emoji-picker": "^1.0.1",
     "vue-google-charts": "^0.3.2",
+    "vue-linkify": "^1.0.1",
     "vue-textarea-autosize": "^1.1.1"
   }
 }
