--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "laravel-echo": "^1.6.1",
     "pusher-js": "^5.0.2",
     "v-click-outside": "^3.0.0",
+    "v-tooltip": "^2.0.3",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
     "vue-emoji-picker": "^1.0.1",
