--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
-        "pusher/pusher-php-server": "^4.0"
+        "pusher/pusher-php-server": "^4.0",
+        "softon/laravel-face-detect": "dev-master"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
