--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,10 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
-        "ext-json": "*",
-        "ext-simplexml": "*",
         "ext-curl": "*",
+        "ext-json": "*",
+        "ext-oci8": "^2.2",
+        "ext-simplexml": "*",
         "ext-soap": "*",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.0",
@@ -20,7 +21,8 @@
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
-        "pusher/pusher-php-server": "^4.0"
+        "pusher/pusher-php-server": "^4.0",
+        "yajra/laravel-oci8": "^6.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
