--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.2",
         "ext-curl": "*",
         "ext-json": "*",
+        "ext-oci8": "^2.2",
         "ext-simplexml": "*",
         "ext-soap": "*",
         "doctrine/dbal": "^2.10",
