--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vue-emoji-picker": "^1.0.1",
     "vue-google-charts": "^0.3.2",
     "vue-linkify": "^1.0.1",
+    "vue-moment": "^4.1.0",
     "vue-textarea-autosize": "^1.1.1"
   }
 }
