--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "vue-dplayer": "0.0.10",
     "vue-emoji-picker": "^1.0.1",
     "vue-google-charts": "^0.3.2",
+    "vue-js-modal": "^1.3.33",
     "vue-linkify": "^1.0.1",
     "vue-moment": "^4.1.0",
     "vue-textarea-autosize": "^1.1.1"
