--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "vue-js-modal": "^1.3.33",
     "vue-linkify": "^1.0.1",
     "vue-moment": "^4.1.0",
-    "vue-textarea-autosize": "^1.1.1"
+    "vue-textarea-autosize": "^1.1.1",
+    "vue-the-mask": "^0.11.1"
   }
 }
