--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "vue-linkify": "^1.0.1",
     "vue-moment": "^4.1.0",
     "vue-textarea-autosize": "^1.1.1",
-    "vue-the-mask": "^0.11.1"
-    "vue-textarea-autosize": "^1.1.1",
+    "vue-the-mask": "^0.11.1",
     "vue-toastr": "^2.1.2",
     "vue-upload-multiple-image": "^1.1.4"
   }
