--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,11 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "ext-curl": "*",
         "ext-json": "*",
         "ext-simplexml": "*",
-        "ext-curl": "*",
         "ext-soap": "*",
+        "aws/aws-sdk-php": "^3.148",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.4",
