--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@riophae/vue-treeselect": "^0.3.0",
     "@smartweb/vue-flash-message": "^0.5.0",
     "laravel-echo": "^1.6.1",
+    "luxon": "^1.25.0",
+    "portal-vue": "^2.1.7",
     "pusher-js": "^5.0.2",
     "v-click-outside": "^3.0.0",
     "v-tooltip": "^2.0.3",
@@ -33,10 +35,10 @@
     "vue-google-charts": "^0.3.2",
     "vue-js-modal": "^1.3.33",
     "vue-linkify": "^1.0.1",
-    "vue-textarea-autosize": "^1.1.1",
-    "vue-toastr": "^2.1.2",
-    "vue-upload-multiple-image": "^1.1.4",
     "vue-moment": "^4.1.0",
-    "vue-the-mask": "^0.11.1"
+    "vue-textarea-autosize": "^1.1.1",
+    "vue-the-mask": "^0.11.1",
+    "vue-toastr": "^2.1.2",
+    "vue-upload-multiple-image": "^1.1.4"
   }
 }
