--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
     "axios": "^0.19.0",
     "cross-env": "^5.1",
     "laravel-mix": "^4.0.7",
-    "lodash": "^4.17.13",
+    "lodash": "^4.17.20",
     "resolve-url-loader": "^2.3.1",
     "sass": "^1.15.2",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.10"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "@riophae/vue-treeselect": "^0.3.0",
     "@smartweb/vue-flash-message": "^0.5.0",
+    "bootstrap": "^4.5.3",
     "laravel-echo": "^1.6.1",
     "luxon": "^1.25.0",
     "portal-vue": "^2.1.7",
