--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "axios": "^0.19.0",
     "cross-env": "^5.1",
     "laravel-mix": "^4.0.7",
-    "lodash": "^4.17.13",
+    "lodash": "^4.17.20",
     "resolve-url-loader": "^2.3.1",
     "sass": "^1.15.2",
     "sass-loader": "^7.1.0",
@@ -22,6 +22,7 @@
   "dependencies": {
     "@riophae/vue-treeselect": "^0.3.0",
     "@smartweb/vue-flash-message": "^0.5.0",
+    "apexcharts": "^3.22.2",
     "laravel-echo": "^1.6.1",
     "luxon": "^1.25.0",
     "portal-vue": "^2.1.7",
@@ -29,6 +30,7 @@
     "v-click-outside": "^3.0.0",
     "v-tooltip": "^2.0.3",
     "vue": "^2.6.10",
+    "vue-apexcharts": "^1.6.0",
     "vue-axios": "^2.1.4",
     "vue-dplayer": "0.0.10",
     "vue-emoji-picker": "^1.0.1",
