--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@riophae/vue-treeselect": "^0.3.0",
     "@smartweb/vue-flash-message": "^0.5.3",
     "bootstrap": "^4.5.3",
+    "jquery": "^3.5.1",
     "laravel-echo": "^1.9.0",
     "luxon": "^1.25.0",
     "portal-vue": "^2.1.7",
