--- a/composer.json
+++ b/composer.json
@@ -24,12 +24,13 @@
         "pusher/pusher-php-server": "^4.0"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "2.6.7",
         "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.4",
+        "lorisleiva/laravel-deployer": "^0.2.12",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0",
-        "lorisleiva/laravel-deployer": "^0.2.12"
+        "phpunit/phpunit": "^8.0"
     },
     "config": {
         "optimize-autoloader": true,
