--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "pusher/pusher-php-server": "^4.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.5",
         "barryvdh/laravel-ide-helper": "2.6.7",
         "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.4",
