Added BrowserSync as dev dependency and used in webpack.mix

--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "devDependencies": {
     "axios": "^0.19.2",
+    "browser-sync": "^2.26.14",
+    "browser-sync-webpack-plugin": "^2.0.1",
     "cross-env": "^5.1",
+    "dotenv": "^8.2.0",
     "laravel-mix": "^4.0.7",
     "lodash": "^4.17.20",
     "resolve-url-loader": "^2.3.1",
@@ -24,18 +27,18 @@
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@riophae/vue-treeselect": "^0.3.0",
     "@smartweb/vue-flash-message": "^0.5.3",
+    "apexcharts": "^3.22.2",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
     "laravel-echo": "^1.9.0",
-    "apexcharts": "^3.22.2",
     "luxon": "^1.25.0",
     "portal-vue": "^2.1.7",
     "pusher-js": "^5.1.1",
     "v-click-outside": "^3.1.2",
     "v-tooltip": "^2.0.3",
     "vue": "^2.6.12",
-    "vue-axios": "^2.1.5",
     "vue-apexcharts": "^1.6.0",
+    "vue-axios": "^2.1.5",
     "vue-dplayer": "0.0.10",
     "vue-emoji-picker": "^1.0.1",
     "vue-google-charts": "^0.3.3",
