--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "barryvdh/laravel-debugbar": "^3.5",
         "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.4",
+        "laravel/dusk": "^6.13",
         "lorisleiva/laravel-deployer": "^0.2.12",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
