--- a/composer.json
+++ b/composer.json
@@ -40,9 +40,7 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": [
-              "laravel/dusk"
-            ]
+            "dont-discover": []
         }
     },
     "autoload": {
