--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "laravel/dusk": "^6.13",
         "lorisleiva/laravel-deployer": "^0.2.12",
         "mockery/mockery": "^1.0",
+        "mpociot/laravel-apidoc-generator": "^4.8",
         "nunomaduro/collision": "^3.0",
         "phpunit/phpunit": "^8.0"
     },
