--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jquery": "^3.5.1",
     "laravel-echo": "^1.9.0",
     "luxon": "^1.25.0",
+    "only-if-changed-webpack-plugin": "0.0.3",
     "portal-vue": "^2.1.7",
     "pusher-js": "^5.1.1",
     "v-click-outside": "^3.1.2",
