--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.12.13",
     "axios": "^0.19.2",
     "browser-sync": "^2.26.14",
     "browser-sync-webpack-plugin": "^2.0.1",
@@ -36,6 +37,7 @@
     "only-if-changed-webpack-plugin": "0.0.3",
     "portal-vue": "^2.1.7",
     "pusher-js": "^5.1.1",
+    "react": "^16.12.0",
     "v-click-outside": "^3.1.2",
     "v-tooltip": "^2.0.3",
     "vue": "^2.6.12",
