--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/preset-react": "^7.12.13",
+    "@babel/preset-typescript": "^7.13.0",
     "axios": "^0.19.2",
     "browser-sync": "^2.26.14",
     "browser-sync-webpack-plugin": "^2.0.1",
@@ -22,6 +24,7 @@
     "resolve-url-loader": "^2.3.1",
     "sass": "^1.29.0",
     "sass-loader": "^7.1.0",
+    "typescript": "^4.2.3",
     "vue-template-compiler": "^2.6.12"
   },
   "dependencies": {
@@ -33,6 +36,7 @@
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
     "laravel-echo": "^1.9.0",
+    "laravel-mix-react-typescript-extension": "^1.0.3",
     "luxon": "^1.25.0",
     "only-if-changed-webpack-plugin": "0.0.3",
     "portal-vue": "^2.1.7",
