--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "private": true,
   "scripts": {
+    "test": "jest",
+    "tw": "jest --watch",
     "dev": "npm run development",
     "dev-no-progress": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
@@ -32,9 +34,14 @@
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@riophae/vue-treeselect": "^0.3.0",
     "@smartweb/vue-flash-message": "^0.5.3",
+    "@types/jest": "^26.0.22",
     "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "@types/react-test-renderer": "^17.0.1",
+    "antd": "^4.14.1",
     "apexcharts": "^3.22.2",
     "bootstrap": "^4.5.3",
+    "jest": "^26.6.3",
     "jquery": "^3.5.1",
     "laravel-echo": "^1.9.0",
     "laravel-mix-react-typescript-extension": "^1.0.3",
@@ -43,6 +50,9 @@
     "portal-vue": "^2.1.7",
     "pusher-js": "^5.1.1",
     "react": "^16.12.0",
+    "react-dom": "^17.0.2",
+    "react-test-renderer": "^17.0.2",
+    "ts-jest": "^26.5.4",
     "v-click-outside": "^3.1.2",
     "v-tooltip": "^2.0.3",
     "vue": "^2.6.12",
