--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@riophae/vue-treeselect": "^0.3.0",
     "@smartweb/vue-flash-message": "^0.5.3",
+    "@types/emoji-mart": "^3.0.4",
     "@types/jest": "^26.0.22",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
@@ -41,6 +42,7 @@
     "antd": "^4.14.1",
     "apexcharts": "^3.22.2",
     "bootstrap": "^4.5.3",
+    "emoji-mart": "^3.0.1",
     "jest": "^26.6.3",
     "jquery": "^3.5.1",
     "laravel-echo": "^1.9.0",
