--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/jest": "^26.0.22",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "@types/react-infinite-scroller": "^1.2.1",
     "@types/react-test-renderer": "^17.0.1",
     "antd": "^4.14.1",
     "apexcharts": "^3.22.2",
@@ -53,6 +54,7 @@
     "pusher-js": "^5.1.1",
     "react": "^16.12.0",
     "react-dom": "^17.0.2",
+    "react-infinite-scroller": "^1.2.4",
     "react-test-renderer": "^17.0.2",
     "ts-jest": "^26.5.4",
     "v-click-outside": "^3.1.2",
