search box in news

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "cross-env": "^5.1",
     "dotenv": "^8.2.0",
     "laravel-mix": "^4.0.7",
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.21",
     "resolve-url-loader": "^2.3.1",
     "sass": "^1.29.0",
     "sass-loader": "^7.1.0",
@@ -36,6 +36,7 @@
     "@smartweb/vue-flash-message": "^0.5.3",
     "@types/emoji-mart": "^3.0.4",
     "@types/jest": "^26.0.22",
+    "@types/lodash": "^4.14.168",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "@types/react-infinite-scroller": "^1.2.1",
