--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "browser-sync-webpack-plugin": "^2.0.1",
     "cross-env": "^5.1",
     "dotenv": "^8.2.0",
+    "jest-extended": "^0.11.5",
     "laravel-mix": "^4.0.7",
     "lodash": "^4.17.21",
     "resolve-url-loader": "^2.3.1",
