--- a/package.json
+++ b/package.json
@@ -10,17 +10,22 @@
     "watch-poll": "npm run watch -- --watch-poll",
     "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
     "prod": "npm run production",
+    "lint": "eslint resources/jsx/**/*.tsx",
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.13.0",
+    "@typescript-eslint/eslint-plugin": "^4.20.0",
+    "@typescript-eslint/parser": "^4.20.0",
     "axios": "^0.19.2",
     "browser-sync": "^2.26.14",
     "browser-sync-webpack-plugin": "^2.0.1",
     "cross-env": "^5.1",
     "dotenv": "^8.2.0",
+    "eslint": "^7.23.0",
+    "eslint-plugin-react": "^7.23.1",
     "jest-extended": "^0.11.5",
     "laravel-mix": "^4.0.7",
     "lodash": "^4.17.21",
