Added `semi` rule in ESLint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,8 @@
         "no-empty-pattern": 0,
         "prefer-const": 0,
         "react/display-name": 0,
-        "@typescript-eslint/no-empty-function": 0
+        "@typescript-eslint/no-empty-function": 0,
+        "semi": "warn"
     },
     "settings": {
         "react": {
