--- a/package.json
+++ b/package.json
@@ -59,10 +59,11 @@
     "only-if-changed-webpack-plugin": "0.0.3",
     "portal-vue": "^2.1.7",
     "pusher-js": "^5.1.1",
-    "react": "^16.12.0",
+    "react": "^17.0.0",
     "react-dom": "^17.0.2",
     "react-infinite-scroller": "^1.2.4",
     "react-test-renderer": "^17.0.2",
+    "rich-markdown-editor": "^11.6.2",
     "ts-jest": "^26.5.4",
     "v-click-outside": "^3.1.2",
     "v-tooltip": "^2.0.3",
