--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.2",
     "react-infinite-scroller": "^1.2.4",
+    "react-markdown": "^5.0.3",
     "react-test-renderer": "^17.0.2",
     "rich-markdown-editor": "^11.6.2",
     "ts-jest": "^26.5.4",
