--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
         "plugin:react/recommended"
     ],
     "rules": {
+        "@typescript-eslint/ban-ts-comment": 0,
         "@typescript-eslint/no-explicit-any": 1,
         "@typescript-eslint/explicit-module-boundary-types": 0,
         "@typescript-eslint/no-empty-interface": 0,
