--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-markdown": "^5.0.3",
     "react-test-renderer": "^17.0.2",
     "rich-markdown-editor": "^11.6.2",
+    "styled-components": "^5.2.3",
     "ts-jest": "^26.5.4",
     "v-click-outside": "^3.1.2",
     "v-tooltip": "^2.0.3",
