--- a/package.json
+++ b/package.json
@@ -45,10 +45,12 @@
     "vue-js-modal": "^1.3.35",
     "vue-linkify": "^1.0.1",
     "vue-moment": "^4.1.0",
+    "vue-text-mask": "^6.1.2",
     "vue-textarea-autosize": "^1.1.1",
     "vue-the-mask": "^0.11.1",
     "vue-toastr": "^2.1.2",
     "vue-upload-multiple-image": "^1.1.6",
+    "vue2-datepicker": "^3.9.0",
     "vuejs-countdown": "^0.2.1",
     "vuejs-datepicker": "^1.6.2"
   }
