--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,5 +19,8 @@
         "react": {
             "version": "detect"
         }
-    }
+    },
+    "ignorePatterns": [
+        "**/*.js"
+    ]
 }
