--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@riophae/vue-treeselect": "^0.3.0",
     "@smartweb/vue-flash-message": "^0.5.3",
+    "@vue/test-utils": "^1.1.4",
     "apexcharts": "^3.22.2",
+    "babel-core": "^6.26.3",
     "bootstrap": "^4.5.3",
     "jest": "^26.6.3",
     "jquery": "^3.5.1",
