--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
     "test:vue": "jest --config=jest.config.vue.js"
   },
   "devDependencies": {
+    "@vue/babel-preset-app": "^4.5.12",
     "@vue/cli-plugin-babel": "^4.5.12",
+    "@vue/test-utils": "^1.1.4",
     "axios": "^0.19.2",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^26.6.3",
     "browser-sync": "^2.26.14",
     "browser-sync-webpack-plugin": "^2.0.1",
     "cross-env": "^5.1",
     "dotenv": "^8.2.0",
+    "jest": "^26.6.3",
     "laravel-mix": "^4.0.7",
     "lodash": "^4.17.20",
     "resolve-url-loader": "^2.3.1",
     "sass": "^1.29.0",
     "sass-loader": "^7.1.0",
+    "ts-jest": "^26.5.4",
     "vue-jest": "^3.0.7",
     "vue-template-compiler": "^2.6.12"
   },
@@ -30,11 +36,8 @@
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@riophae/vue-treeselect": "^0.3.0",
     "@smartweb/vue-flash-message": "^0.5.3",
-    "@vue/test-utils": "^1.1.4",
     "apexcharts": "^3.22.2",
-    "babel-core": "^6.26.3",
     "bootstrap": "^4.5.3",
-    "jest": "^26.6.3",
     "jquery": "^3.5.1",
     "laravel-echo": "^1.9.0",
     "luxon": "^1.25.0",
