--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^8.2.0",
     "laravel-mix": "^4.0.7",
     "lodash": "^4.17.20",
+    "prettier": "^2.2.1",
     "resolve-url-loader": "^2.3.1",
     "sass": "^1.29.0",
     "sass-loader": "^7.1.0",
