--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,8 +27,8 @@ before_script:
   - apt-get update -yqq
   # Prep for Node
   - apt-get install gnupg -yqq
-  # Upgrade to Node 8
-  - curl -sL https://deb.nodesource.com/setup_8.x | bash -
+  # Upgrade to Node 10
+  - curl -sL https://deb.nodesource.com/setup_10.x | bash -
   # Install dependencies
   - apt-get install git nodejs libcurl4-gnutls-dev libicu-dev libmcrypt-dev libvpx-dev libjpeg-dev libpng-dev libxpm-dev zlib1g-dev libfreetype6-dev libxml2-dev libexpat1-dev libbz2-dev libgmp3-dev libldap2-dev unixodbc-dev libpq-dev libsqlite3-dev libaspell-dev libsnmp-dev libpcre3-dev libtidy-dev -yqq
   # Install php extensions
@@ -62,12 +62,33 @@ before_script:
   # Run database seed
   - php artisan db:seed
 
-test:
+test-php-7.0:
+  image: php:7.0
   script:
-    # run laravel tests
     - php vendor/bin/phpunit --coverage-text --colors=never
-    # run frontend tests
-    # if you have any task for testing frontend
-    # set it in your package.json script
-    # comment this out if you don't have a frontend test
+    - npm test
+
+
+test-php-7.1:
+  image: php:7.1
+  script:
+    - php vendor/bin/phpunit --coverage-text --colors=never
+    - npm test
+
+test-php-7.2:
+  image: php:7.1
+  script:
+    - php vendor/bin/phpunit --coverage-text --colors=never
+    - npm test
+
+test-php-7.3:
+  image: php:7.1
+  script:
+    - php vendor/bin/phpunit --coverage-text --colors=never
+    - npm test
+
+test-php-7.4:
+  image: php:7.1
+  script:
+    - php vendor/bin/phpunit --coverage-text --colors=never
     - npm test
