--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,18 +57,18 @@ before_script:
   # Run database seed
   - php artisan db:seed
 
-test-php-7.0:
-  image: php:7.0
-  script:
-    - php vendor/bin/phpunit --coverage-text --colors=never
-    - npm test
+# test-php-7.0:
+#   image: php:7.0
+#   script:
+#     - php vendor/bin/phpunit --coverage-text --colors=never
+#     - npm test
 
 
-test-php-7.1:
-  image: php:7.1
-  script:
-    - php vendor/bin/phpunit --coverage-text --colors=never
-    - npm test
+# test-php-7.1:
+#   image: php:7.1
+#   script:
+#     - php vendor/bin/phpunit --coverage-text --colors=never
+#     - npm test
 
 test-php-7.2:
   image: php:7.2
