--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ services:
   - mysql:latest
 
 variables:
-  MYSQL_DATABASE: project_name
+  MYSQL_DATABASE: my_cic_test
   MYSQL_ROOT_PASSWORD: secret
 
 # This folder is cached between builds
