--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,91 +1,48 @@
-# Pick zero or more services to be used on all builds.
-# Only needed when using a docker container to run your tests in.
-# Check out: http://docs.gitlab.com/ee/ci/docker/using_docker_images.html#what-is-a-service
+image: lorisleiva/laravel-docker:latest
+
 services:
-  - mysql:latest
+  - mysql:5.7
 
 variables:
+  MYSQL_ROOT_PASSWORD: password
   MYSQL_DATABASE: my_cic_test
-  MYSQL_ROOT_PASSWORD: secret
+  MYSQL_ROOT_HOST: mysql
+  MYSQL_USER: user
+  MYSQL_PASSWORD: secret
 
-# This folder is cached between builds
-# http://docs.gitlab.com/ee/ci/yaml/README.html#cache
-cache:
-  paths:
-    - vendor/
-    - node_modules/
+  DB_DATABASE: my_cic_test
+  DB_HOST: mysql
+  DB_USERNAME: root
+  DB_PASSWORD: secret
 
-# This is a basic example for a gem or script which doesn't use
-# services such as redis or postgres
-before_script:
-  # Update packages
-  - apt-get update -yqq
-  # Prep for Node
-  - apt-get install gnupg -yqq
-  # Upgrade to Node 10
-  - curl -sL https://deb.nodesource.com/setup_10.x | bash -
-  # Install dependencies
-  - apt-get install git nodejs libcurl4-gnutls-dev libicu-dev libmcrypt-dev libvpx-dev libjpeg-dev libpng-dev libxpm-dev zlib1g-dev libfreetype6-dev libxml2-dev libexpat1-dev libbz2-dev libgmp3-dev libldap2-dev unixodbc-dev libpq-dev libsqlite3-dev libaspell-dev libsnmp-dev libpcre3-dev libtidy-dev -yqq
-  # Install php extensions
-  - docker-php-ext-install mbstring pdo_mysql curl json intl gd xml zip bz2 opcache soap
-  # Install & enable Xdebug for code coverage reports
-  - pecl install xdebug
-  - docker-php-ext-enable xdebug
-  # Install Composer and project dependencies.
-  - curl -sS https://getcomposer.org/installer | php
-  - php composer.phar update
-  # Install Node dependencies.
-  # comment this out if you don't have a node dependency
-  - npm install
-  # Copy over testing configuration.
-  # Don't forget to set the database config in .env.testing correctly
-  # DB_HOST=mysql
-  # DB_DATABASE=project_name
-  # DB_USERNAME=root
-  # DB_PASSWORD=secret
-  - cp .env.testing .env
-  # Run npm build
-  # comment this out if you don't have a frontend build
-  # you can change this to to your frontend building script like
-  # npm run build
-  - npm run dev
-  # Generate an application key. Re-cache.
-  - php artisan key:generate
-  - php artisan config:cache
-  # Sleep 60s 'cause mysql server have to be runned
-  - sleep 60s
-  # Run database migrations.
-  - php artisan migrate
-  # Run database seed
-  - php artisan db:seed
-
-# test-php-7.0:
-#   image: php:7.0
-#   script:
-#     - php vendor/bin/phpunit --coverage-text --colors=never
-#     - npm test
-
-
-# test-php-7.1:
-#   image: php:7.1
-#   script:
-#     - php vendor/bin/phpunit --coverage-text --colors=never
-#     - npm test
-
-test-php-7.2:
-  image: php:7.2
+composer:
+  stage: build
   script:
-    - php vendor/bin/phpunit --coverage-text --colors=never
-    - npm test
+    - composer install --prefer-dist --no-ansi --no-interaction --no-progress --no-scripts
+    - cp .env.testing .env
+    - php artisan key:generate
+  artifacts:
+    expire_in: 30 days
+    paths:
+      - vendor/
+      - .env
+  cache:
+    key: ${CI_COMMIT_REF_SLUG}-composer
+    paths:
+      - vendor/
+      - node_modules/
 
-test-php-7.3:
-  image: php:7.3
+build
+  stage: build
   script:
-    - php vendor/bin/phpunit --coverage-text --colors=never
-    - npm test
+    - npm i
+	- npm run build
 
-test-php-7.4:
-  image: php:7.4
+phpunit:
+  stage: test
+  dependencies:
+    - composer
   script:
-    - php vendor/bin/phpunit --coverage-text --colors=never
-    - npm test
+    - php artisan migrate -v
+    - phpunit --coverage-text --colors=never
+...
