--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ variables:
 composer:
   stage: build
   script:
-    - composer install --prefer-dist --no-ansi --no-interaction --no-progress --no-scripts
+    - composer update --prefer-dist --no-ansi --no-interaction --no-progress --no-scripts
     - cp .env.testing .env
     - php artisan key:generate
   artifacts:
