--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,9 @@ variables:
 composer:
   stage: build
   script:
+    - apt-get update
+    - apt-get install -y libxml2-dev php-soap
+    - apt-get clean
     - docker-php-ext-install soap
     - composer update --prefer-dist --no-ansi --no-interaction --no-progress --no-scripts
     - cp .env.testing .env
