--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ composer:
     - apt-get update
     - apt-get install -y libxml2-dev php-soap
     - apt-get clean
-    - docker-php-ext-install soap
+    - docker-php-ext-install xml soap
     - composer update --prefer-dist --no-ansi --no-interaction --no-progress --no-scripts
     - cp .env.testing .env
     - php artisan key:generate
