--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,11 @@ variables:
   DB_USERNAME: root
   DB_PASSWORD: secret
 
+before_script:
+  - apt-get update -yqq
+  - apt-get install -y libxml2-dev
+  - docker-php-ext-install xml soap
+
 composer:
   stage: build
   script:
