--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,8 @@ composer:
   stage: build
   script:
     - docker-php-ext-install xml soap
-    - composer update --prefer-dist --no-ansi --no-interaction --no-progress --no-scripts
+    - wget https://getcomposer.org/composer.phar -O ./composer.phar
+    - php composer.phar update --prefer-dist --no-ansi --no-interaction --no-progress --no-scripts
     - cp .env.testing .env
     - php artisan key:generate
   artifacts:
