--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ composer:
   stage: build
   script:
     - wget https://getcomposer.org/composer.phar -O ./composer.phar
-    - php composer.phar update --prefer-dist --no-ansi --no-interaction --no-progress --no-scripts
+    - php composer.phar update 
     - cp .env.testing .env
     - php artisan key:generate
   artifacts:
