--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ variables:
   DB_PASSWORD: secret
 
 before_script:
-  - curl -fsSL https://deb.nodesource.com/setup_10.x | sudo -E bash -
+  - curl -fsSL https://deb.nodesource.com/setup_10.x | -E bash -
   - apt-get install -y nodejs
   - apt-get update -yqq
   - apt-get install -y libxml2-dev wget zlib1g-dev libwebp-dev libjpeg62-turbo-dev libpng-dev libxpm-dev libfreetype6-dev
