--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,7 @@ before_script:
   - apt-get install -y libxml2-dev wget zlib1g-dev libwebp-dev libjpeg62-turbo-dev libpng-dev libxpm-dev libfreetype6-dev
   - docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ --with-png-dir=/usr/include/
   - docker-php-ext-install xml soap zip gd
+  - docker-php-ext-install mysqli && docker-php-ext-enable mysqli
   - apt-get clean
 
 composer:
