--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ variables:
 
 #
 before_script:
-  - curl -fsSL https://deb.nodesource.com/setup_10.x | bash -
+  - curl -fsSL https://deb.nodesource.com/setup_12.x | bash -
   - apt-get install -y nodejs
   - apt-get update -yqq
   - apt-get install -y libxml2-dev wget zlib1g-dev libwebp-dev libjpeg62-turbo-dev libpng-dev libxpm-dev libfreetype6-dev
@@ -37,6 +37,7 @@ composer:
     expire_in: 30 days
     paths:
       - vendor/
+      - node_modules/
       - .env
   cache:
     key: ${CI_COMMIT_REF_SLUG}-composer
