--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,10 +20,10 @@ before_script:
   - curl -fsSL https://deb.nodesource.com/setup_12.x | bash -
   - apt-get install -y nodejs
   - apt-get update -yqq
-  - apt-get install -y libxml2-dev wget zlib1g-dev libwebp-dev libjpeg62-turbo-dev libpng-dev libxpm-dev libfreetype6-dev
+  - apt-get install -y libxml2-dev wget zlib1g-dev libwebp-dev libjpeg62-turbo-dev libpng-dev libxpm-dev libfreetype6-dev php7.2-mysql
   - docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ --with-png-dir=/usr/include/
   - docker-php-ext-install xml soap zip gd
-  - docker-php-ext-install mysql && docker-php-ext-enable mysql
+  # - docker-php-ext-install mysql && docker-php-ext-enable mysql
   - apt-get clean
 
 composer:
