--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: php:7.2
+image: centras:php7.2
 
 services:
   - mysql:5.7
@@ -16,9 +16,6 @@ variables:
   DB_PASSWORD: secret
 
 before_script:
-  - curl -fsSL https://deb.nodesource.com/setup_12.x | bash -
-  - apt-get install -y nodejs
-  - apt-get update -yqq
   - apt-get install -y libxml2-dev wget zlib1g-dev libwebp-dev libjpeg62-turbo-dev libpng-dev libxpm-dev libfreetype6-dev
   - docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ --with-png-dir=/usr/include/
   - docker-php-ext-install xml soap zip gd
