--- a/.env.testing
+++ b/.env.testing
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:SaYfcUjht1j8/4uJ810xTHG46S/yLjQ/AkYPJJWhsNQ=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=my_cic_test
 DB_USERNAME=root
-DB_PASSWORD=secret
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -42,3 +42,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+KIAS_MOCK_ENABLED=1
+KIAS_MOCK_DELAY=0
