--- a/.docker/nginx/mycic.conf
+++ b/.docker/nginx/mycic.conf
@@ -3,12 +3,33 @@ server {
     listen [::]:80;
 
     root /app/public;
-    index index.php index.html index.htm index.nginx-debian.html;
+    index index.php;
 
-    # server_name mycic;
+    server_name localhost;
+
+    location = /favicon.ico { access_log off; log_not_found off;}
+    location = /robots.txt  { access_log off; log_not_found off;}
+
+    access_log off;
+    error_page 404 /index.php;
+    sendfile off;
 
     location / {
         autoindex on;
         try_files $uri $uri/ /index.php?$query_string;
     }
+
+    location ~ \.php$ {
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass php.docker:8000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root/$fastcgi_script_name;
+        fastcgi_read_timeout 300;
+    }
+
+    location ~ \.(js|css|png|jpg|gif|swf|ico|pdf|mov|fla|zip|rar)$ {
+       try_files $uri =404;
+    }
+
 }
