--- a/.docker/nginx/mycic.conf
+++ b/.docker/nginx/mycic.conf
@@ -7,6 +7,8 @@ server {
 
     server_name localhost;
 
+    error_log /logs/mycic.log error;
+
     location = /favicon.ico { access_log off; log_not_found off;}
     location = /robots.txt  { access_log off; log_not_found off;}
 
