--- a/.docker/nginx/mycic.conf
+++ b/.docker/nginx/mycic.conf
@@ -1,16 +1,15 @@
 server {
-    listen 80;
-    listen [::]:80;
+    listen 0.0.0.0:80;
 
     root /app/public;
     index index.php;
 
-    server_name localhost;
+    # server_name nginx.docker;
 
     error_log /logs/mycic.log error;
 
-    location = /favicon.ico { access_log off; log_not_found off;}
-    location = /robots.txt  { access_log off; log_not_found off;}
+    location = /favicon.ico { access_log off; log_not_found off; }
+    location = /robots.txt  { access_log off; log_not_found off; }
 
     access_log off;
     error_page 404 /index.php;
@@ -22,16 +21,13 @@ server {
     }
 
     location ~ \.php$ {
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        # fastcgi_pass [PHP_FPM_LINK_NAME]:9000;
         fastcgi_pass php.docker:8000;
         fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root/$fastcgi_script_name;
-        fastcgi_read_timeout 300;
+        # include fastcgi.conf;
     }
 
     location ~ \.(js|css|png|jpg|gif|swf|ico|pdf|mov|fla|zip|rar)$ {
        try_files $uri =404;
     }
-
 }
