--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,24 +18,22 @@ services:
     ports:
       - "8000:9000"
 
+    volumes:
+      - .:/app
+
     hostname: php.docker
     links:
       - redis
 
   nginx:
     container_name: mycic_nginx
-
     image: nginx:latest
-
     volumes:
-      - ./.docker/nginx:/etc/nginx/conf.d
-      - .:/app
-      - ./.docker/logs/nginx:/logs
-
+     - ./.docker/nginx:/etc/nginx/conf.d
+     - .:/app
+     - ./.docker/logs/nginx:/logs
     ports:
-      - "8080:80"
-
+     - "8080:80"
     hostname: nginx.docker
-
     links:
-      - php-app
+     - php-app
