--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,10 @@ version: "3"
 # Live Reloading: https://betterprogramming.pub/live-reloading-with-docker-compose-for-efficient-development-356d50e91e39
 # Docker-compose: идеальное рабочее окружение https://habr.com/ru/post/346086/
 
+networks:
+  app-tier:
+    driver: bridge
+
 services:
   redis:
     container_name: mycic_redis
@@ -22,8 +26,11 @@ services:
       - .:/app
 
     hostname: php.docker
-    links:
+    depends_on:
       - redis
+
+    networks:
+      - app-tier
 
   nginx:
     container_name: mycic_nginx
@@ -34,5 +41,8 @@ services:
     ports:
      - "8080:80"
     hostname: nginx.docker
-    links:
+    depends_on:
      - php-app
+
+    networks:
+      - app-tier
