--- a/.docker/nginx/default.conf
+++ b/.docker/nginx/default.conf
@@ -1,30 +1,27 @@
+
 server {
+    index index.php index.html;
+
+    # server_name mycic.local;
+
     listen 0.0.0.0:80;
 
-    # server_name nginx.docker;
-
-    error_log /logs/mycic.log error;
+    index index.php index.html;
+    # server_name php-docker.local;
+    error_log  /logs/error.log;
+    access_log /logs/access.log;
+    root /app;
 
     location = /favicon.ico { access_log off; log_not_found off; }
     location = /robots.txt  { access_log off; log_not_found off; }
 
-    access_log off;
-    error_page 404 /index.php;
-    sendfile off;
-
-    location / {
-        autoindex on;
-        try_files $uri $uri/ /index.php?$query_string;
-    }
-
     location ~ \.php$ {
-        # fastcgi_pass [PHP_FPM_LINK_NAME]:9000;
+        try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass php.docker:9000;
         fastcgi_index index.php;
-        # include fastcgi.conf;
-    }
-
-    location ~ \.(js|css|png|jpg|gif|swf|ico|pdf|mov|fla|zip|rar)$ {
-       try_files $uri =404;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 }
