--- a/.docker/nginx/default.conf
+++ b/.docker/nginx/default.conf
@@ -10,7 +10,7 @@ server {
     # server_name php-docker.local;
     error_log  /logs/error.log;
     access_log /logs/access.log;
-    root /app;
+    root /app/public;
 
     location = /favicon.ico { access_log off; log_not_found off; }
     location = /robots.txt  { access_log off; log_not_found off; }
