--- a/.docker/php/Dockerfile
+++ b/.docker/php/Dockerfile
@@ -1,5 +1,7 @@
 FROM php:7.4-fpm
 
-RUN apt-get update && \
+RUN apt-get update -y && \
     docker-php-ext-install pdo pdo_mysql && \
-    apt-get install iputils-ping -y
+    apt-get install -y \
+            iputils-ping \
+            supervisor
