--- a/.docker/php/Dockerfile
+++ b/.docker/php/Dockerfile
@@ -8,7 +8,8 @@ RUN apt-get update -y && \
 
     apt-get install -y \
             iputils-ping \
-            supervisor
+            supervisor \
+            git
 
 RUN pecl install redis && docker-php-ext-enable redis
 
