--- a/.docker/php/supervisord/conf.d/laravel-queue-default.conf
+++ b/.docker/php/supervisord/conf.d/laravel-queue-default.conf
@@ -1,12 +1,12 @@
+[supervisord]
+nodaemon=true
+
 [program:laravel-worker]
 process_name=%(program_name)s_%(process_num)02d
-command=php /app/artisan queue:work --sleep=3 --tries=3
+command=php %(ENV_APP_ROOT)s/artisan queue:work %(ENV_QUEUE_DRIVER)s %(ENV_OPTIONS)s
+stdout_logfile=%(ENV_APP_ROOT)s/storage/logs/worker.log
 autostart=true
 autorestart=true
-stopasgroup=true
-killasgroup=true
-user=root
-numprocs=8
+numprocs=%(ENV_NUM_PROCS)s
 redirect_stderr=true
-stdout_logfile=/logs/supervisor/worker.log
 stopwaitsecs=3600
