--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,12 +10,12 @@ stages:
 variables:
   MYSQL_ROOT_PASSWORD: secret
   MYSQL_DATABASE: my_cic_test
-  MYSQL_ROOT_HOST: mysql
+  MYSQL_ROOT_HOST: db.docker
   MYSQL_USER: user
   MYSQL_PASSWORD: secret
 
   DB_DATABASE: my_cic_test
-  DB_HOST: mysql
+  DB_HOST: db.docker
   DB_USERNAME: root
   DB_PASSWORD: secret
 
